# en675_fpga_sw_out

./: CMakeLists.txt  README
Source/boot/: CMakeLists.txt  boot.c  boot.h  exbl.c  exbl.h  exbl.lds  irq.c  main.c  mentry.S
Source/core/: CMakeLists.txt
Source/core/core0/: CMakeLists.txt  enx_file.c  enx_file.h  enx_record.c  enx_record.h  enx_rtos.c  enx_rtos.h  enx_stream.c  enx_stream.h  main0.c
Source/core/core1/: CMakeLists.txt  main1.c
Source/core/core2/: CMakeLists.txt  main2.c
Source/core/core3/: CMakeLists.txt  main3.c
Source/core/shared/: CMakeLists.txt  CMakeLists.txt.bak  boot.c  boot.h  exbl.c  exbl.lds  mentry.S  msg.c  msg.h  user.c  user.h
Source/core/shared/test/: test_dma.c  test_eth.c  test_header.h  test_nonos.c  test_nonos.h  test_sdio.c
Source/dev/: CMakeLists.txt  adc.c  aes.c  cfg_define.h  cfg_filesystem.h  cfg_media.h  cfg_memory.h  cfg_network.h  checksum.c  ddr.c  dev.h  dev_debug.h  dev_device.h  dev_device.h.cmake.in  dev_functions.h  dev_model.h  dev_peri.h  dev_peri.h.cmake.in  dev_reg_ex.h  dev_reg_m.h  dev_reg_m2s.h  dev_reg_s.h  dev_reg_s_backup.h  dev_reg_s_master.h  dev_types.h  dev_verify.h  dma.c  eth.c  gpio.c  i2c.c  i2s.c  ir.c  irq.c  oic.c  sdio.c  sfls.c  sha.c  spi.c  sys.c  time.c  (+3 more)
Source/dev/HDMI/LONTIUM/: lt8618sx.c  lt8618sx.h
Source/dev/HDMI/SILICON/: AV_Config.c  AV_Config.h  Constants.h  EDID.c  EDID.h  Externals.h  Globals.c  HDCP.c  HDCP.h  SerialPort.h  TPI.c  TPI.h  TPI_Access.c  TPI_Access.h  TypeDefs.h  VideoModeTable.c  VideoModeTable.h  defs.h  eHDMI.c  eHDMI.h  hdmi.c  hdmi.h  i2c_master_sw.c  si_apiCDC.c  si_apiCDC.h  si_apiCEC.c  si_apiCEC.h  si_apiConfigure.h  si_apiCpi.c  si_apiCpi.h  si_cdc_enums.h  si_cdc_heac.c  si_cdc_heac.h  si_cec_enums.h  si_cpCDC.c  si_cpCDC.h  si_cpCEC.c  si_cpCEC.h  si_datatypes.h
Source/dev/MCP2515/: MCP2515_main.c  MCP2515_main.h
Source/dev/TP2827/: TP_main.c  TP_main.h  TP_main_BT656_DDR.c
Source/dev/audio/: AUD_8000_CH1.h  AUD_8000_CH1_BE.h  audio.c  audio.h  g711_8k_16bit.h  hello_pcm.h  sound4a.h  sound4p.h  sound4u.h  tlv320aic3206.c  tlv320aic3206.h
Source/dev/cpu/: asm.h  bits.h  encoding.h  mtrap.h  pmp.c  pmp.h  rv_utils.c  rv_utils.h  syscall.c  syscall.h
Source/dev/eeprom/: eeprom.c  eeprom.h
Source/dev/ethernet/: ethphy.c  ethphy.h  ksz8081mnx.c  ksz8081mnx.h  ksz8081rnb.c  ksz8081rnb.h  ksz9031rnx.c  ksz9031rnx.h
Source/dev/isp/: isp_ae.c  isp_ae.h  isp_af.c  isp_af.h  isp_app.h  isp_awb.c  isp_awb_tbl.h  isp_clk.h  isp_cont.c  isp_cvbs_tbl.h  isp_digital_interface.c  isp_digital_interface.h  isp_etc.c  isp_font.c  isp_font.h  isp_font_tbl.h  isp_imd.c  isp_imd.h  isp_interface.c  isp_interface.h  isp_main.c  isp_menu.c  isp_menu.h  isp_menu_str.h  isp_par.c  isp_reg.h  isp_reg_ex.h  isp_sensor_parameter.h  isp_tbl.c  isp_tdn.c  isp_user_parameter.h  isp_vlc_tbl.h
Source/dev/jpeg/: isp_jpeg.c  isp_jpeg.h
Source/dev/key/: key.c  key.h
Source/dev/link_msg/: Link_msg_pro.c
Source/dev/minilib/: aes.h  aes_cbc.c  aes_core.c  aes_ecb.c  cbc128.c  enx_math.c  enx_math.h  enx_time.c  enx_time.h  md32_common.h  md5.c  net_ascii.c  net_ascii.h  sha.h  sha256.c
Source/dev/rtc/: pcf8563.c  pcf8563.h  rtc-lib.c  rtc.c  rtc.h  s35390a.c  s35390a.h
Source/dev/sdio/: sdio_card.h  sdio_cd.c  sdio_cd.h  sdio_host.h  sdio_mmc.c  sdio_mmc.h  sdio_wf.c  sdio_wf.h
Source/dev/sfls/: eon_en25qh128a.c  eon_en25qh128a.h  eon_en25qh256.c  eon_en25qh256.h  gigadevice_gd25q128c.c  gigadevice_gd25q128c.h  issi_is25lp064.c  issi_is25lp128.c  issi_is25lp256.c  issi_is25lp256.h  macronix_mx25l12835f.c  macronix_mx25l12835f.h  macronix_mx25u12832f.c  micron_mt25ql128.c  micron_mt25ql128.h  micron_mt25ql256.c  micron_mt25ql256.h  sfls_model.c  sfls_model.h  winbond_w25q256jvq.h
Source/dev/sfls_m/: eon_en25qh128a.c  eon_en25qh128a.h  eon_en25qh256.c  issi_is25lp064.h  issi_is25lp128.h  issi_is25lp256.c  issi_is25lp256.h  macronix_mx25l12835f.c  macronix_mx25l12835f.h  macronix_mx25u12832f.c  macronix_mx25u12832f.h  micron_n25q128a.c  micron_n25q128a.h  sfls_model.c  winbond_w25q256jvq.c  winbond_w25q64jviq.c  winbond_w25q64jviq.h
Source/dev/string/: enx_string.c  enx_string.h  uart_string.c  uart_string.h  vsnprintf.c  vsnprintf.h
Source/dev/wifi/: wifi_cfg.h  wlif_tools.c  wlif_tools.h
Source/lib/FatFs/: CMakeLists.txt
Source/lib/FatFs/source/: diskio.c  ff.c  ff.h  ffconf.h
Source/lib/FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h  enx_freertos.h
Source/lib/FreeRTOS/Source/: list.c  tasks.c
Source/lib/lwIP/: CMakeLists.txt
Source/lib/lwIP/api/: api_lib.c  tcpip.c
Source/lib/lwIP/core/: pbuf.c
Source/lib/lwIP/port/: enx_lwip.h  ethernetif.c  ethernetif.h  lwipopts.h  networkif.c  networkif.h  sys_arch.c  wifiif.c  wifiif.h
Source/lib/wifi_sd8782/: CMakeLists.txt  ewl.h  ewl_pkt_header.h  old_Makefile
Source/lib/wifi_sd8782/ewl_mlan/: Makefile  mlan.h  mlan_11d.c  mlan_11h.c  mlan_11h.h  mlan_11n.c  mlan_11n.h  mlan_11n_aggr.c  mlan_11n_aggr.h  mlan_11n_rxreorder.c  mlan_11n_rxreorder.h  mlan_cfp.c  mlan_cmdevt.c  mlan_decl.h  mlan_fw.h  mlan_ieee.h  mlan_init.c  mlan_init.h  mlan_ioctl.h  mlan_join.c  mlan_join.h  mlan_main.h  mlan_meas.c  mlan_meas.h  mlan_misc.c  mlan_module.c  mlan_scan.c  mlan_sdio.c  mlan_sdio.h  mlan_shim.c  mlan_sta_cmd.c  mlan_sta_cmdresp.c  mlan_sta_event.c  mlan_sta_ioctl.c  mlan_sta_rx.c  mlan_sta_tx.c  mlan_txrx.c  mlan_uap.h  mlan_uap_cmdevent.c  mlan_uap_ioctl.c  (+4 more)
Source/lib/wifi_sd8782/ewl_os/: 80211d_domain.h  Makefile  _wifi_firm.h  ewl.c  ewl_os.c  ewl_os.h  ewl_passphrase.c  ewl_passphrase.h  ewl_wext.c  ewl_wext.h  ewlap.c  if.h  iw_handler.h  mlan_err.h  moal_ioctl.c  moal_main.c  moal_main.h  moal_priv.c  moal_priv.h  moal_sdio.h  moal_sdio_mmc.c  moal_shim.c  moal_shim.h  moal_uap.c  moal_uap.h  moal_uap_priv.c  moal_uap_priv.h  moal_uap_wext.c  moal_util.h  moal_wext.c  moal_wext.h  uapcmd.c  uaputl.h  wext.h  wifi_firm.h  wifi_firm_chrome.h  wifi_firm_old.h  wifi_porting.txt  wireless.h
Source/lib/wifi_sd8782/ewl_sdio/: sdio.c  sdio.h  sdio_func.h
Source/lib/wifi_sd8782/wpa_supplicant/: Makefile  (+23 more)
(+228 files in other folders)
