# 최소한의 Cmake 버전을 설정
CMAKE_MINIMUM_REQUIRED ( VERSION 3.13.2 )

# 프로젝트 이름 설정
PROJECT(EN675_DEV C ASM)

# Configure File
CONFIGURE_FILE ( dev_peri.h.cmake.in ${CMAKE_CURRENT_SOURCE_DIR}/dev_peri.h)
CONFIGURE_FILE ( dev_device.h.cmake.in ${CMAKE_CURRENT_SOURCE_DIR}/dev_device.h)

# 소스 코드
SET ( DEV_HDRS
	cfg_define.h
	cfg_filesystem.h
	cfg_media.h
	cfg_memory.h
	cfg_network.h
	dev.h
	dev_debug.h
	dev_device.h
	dev_functions.h
	dev_model.h
	dev_peri.h
	dev_reg_m.h
	dev_reg_s.h
	dev_reg_ex.h
	dev_types.h
	dev_verify.h
	audio/audio.h
	audio/tlv320aic3206.h
	cpu/asm.h
	cpu/bits.h
	cpu/encoding.h
	cpu/mtrap.h
	cpu/syscall.h
	cpu/rv_utils.h
	cpu/pmp.h
	eeprom/eeprom.h
	ethernet/ethphy.h
	ethernet/ksz8081mnx.h
	ethernet/ksz8081rnb.h
	ethernet/ksz9031rnx.h
	HDMI/SILICON/AV_Config.h
	HDMI/SILICON/Constants.h
	HDMI/SILICON/defs.h
	HDMI/SILICON/EDID.h
	HDMI/SILICON/eHDMI.h
	HDMI/SILICON/Externals.h
	HDMI/SILICON/HDCP.h
	HDMI/SILICON/hdmi.h
	HDMI/SILICON/i2c_master_sw.h
	HDMI/SILICON/Macros.h
	HDMI/SILICON/SerialPort.h
	HDMI/SILICON/si_apiCDC.h
	HDMI/SILICON/si_apiCEC.h
	HDMI/SILICON/si_apiConfigure.h
	HDMI/SILICON/si_apiCpi.h
	HDMI/SILICON/si_cdc_enums.h
	HDMI/SILICON/si_cdc_heac.h
	HDMI/SILICON/si_cec_enums.h
	HDMI/SILICON/si_cpCDC.h
	HDMI/SILICON/si_cpCEC.h
	HDMI/SILICON/si_cpi_regs.h
	HDMI/SILICON/si_datatypes.h
	HDMI/SILICON/TPI.h
	HDMI/SILICON/TPI_Access.h
	HDMI/SILICON/TPI_Regs.h
	HDMI/SILICON/TypeDefs.h
	HDMI/SILICON/VideoModeTable.h
	HDMI/LONTIUM/lt8618sx.h
	isp/isp_reg.h
	isp/isp_reg_ex.h
	isp/isp_digital_interface.h
	isp/isp_font.h
	isp/isp_font_tbl.h
	isp/isp_clk.h
	isp/isp_cvbs_tbl.h
	isp/isp_app.h
	isp/isp_interface.h
	isp/isp_vlc_tbl.h
	isp/isp_ae.h
	isp/isp_af.h
	isp/isp_awb_tbl.h
	isp/isp_imd.h
	isp/isp_menu.h
	isp/isp_menu_str.h
	isp/isp_user_parameter.h
	isp/isp_sensor_parameter.h
	jpeg/isp_jpeg.h
	key/key.h
	MCP2515/MCP2515_main.h
	minilib/aes.h
	minilib/aes_local.h	
	minilib/md5.h
	minilib/net_ascii.h
	minilib/sha.h
	minilib/sha1.h
	minilib/md32_common.h
	minilib/Base64.h
	minilib/enx_math.h
	minilib/enx_time.h
	rtc/rtc.h
	rtc/pcf8563.h
	rtc/s35390a.h
	sdio/sdio_host.h
	sdio/sdio_card.h
	sdio/sdio_cd.h
	sdio/sdio_mmc.h
	sdio/sdio_wf.h
	sfls/sfls_model.h
	sfls/eon_en25qh128a.h
	sfls/eon_en25qh256.h
	sfls/winbond_w25q64jviq.h
	sfls/winbond_w25q256jvq.h
	sfls/gigadevice_gd25q128c.h
	sfls/micron_n25q128a.h
	sfls/micron_mt25ql128.h
	sfls/micron_mt25ql256.h
	sfls/issi_is25lp064.h
	sfls/issi_is25lp128.h
	sfls/issi_is25lp256.h
	sfls/macronix_mx25l12835f.h
	sfls/macronix_mx25u12832f.h
	string/vsnprintf.h
	string/enx_string.h
	string/uart_string.h
	TP2827/TP_main.h
	wifi/wifi_cfg.h
	wifi/wlif_tools.h
)

SET ( DEV_SRCS
	adc.c
	aes.c
	oic.c
	checksum.c
	ddr.c
	dma.c
	eth.c
	gpio.c
	i2c.c
	i2s.c
	ir.c
	irq.c
	sdio.c
	sfls.c
	sha.c
	spi.c
	timer.c
	uart.c
	sys.c
	wdt.c
	audio/audio.c
	audio/tlv320aic3206.c
	cpu/syscall.c
	cpu/rv_utils.c
	cpu/pmp.c
	eeprom/eeprom.c
	ethernet/ethphy.c
	ethernet/ksz8081mnx.c
	ethernet/ksz8081rnb.c
	ethernet/ksz9031rnx.c
	HDMI/SILICON/AV_Config.c
	HDMI/SILICON/EDID.c
	HDMI/SILICON/eHDMI.c
	HDMI/SILICON/Globals.c
	HDMI/SILICON/HDCP.c
	HDMI/SILICON/hdmi.c
	HDMI/SILICON/i2c_master_sw.c
	HDMI/SILICON/si_apiCDC.c
	HDMI/SILICON/si_apiCEC.c
	HDMI/SILICON/si_apiCpi.c
	HDMI/SILICON/si_cdc_heac.c
	HDMI/SILICON/si_cpCDC.c
	HDMI/SILICON/si_cpCEC.c
	HDMI/SILICON/TPI.c
	HDMI/SILICON/TPI_Access.c
	HDMI/SILICON/VideoModeTable.c
	HDMI/LONTIUM/lt8618sx.c
	isp/isp_digital_interface.c
	isp/isp_font.c
	isp/isp_interface.c
	isp/isp_tbl.c
	isp/isp_par.c
	isp/isp_menu.c
	isp/isp_main.c
	isp/isp_ae.c
	isp/isp_af.c
	isp/isp_awb.c
	isp/isp_imd.c
	isp/isp_tdn.c
	isp/isp_cont.c
	isp/isp_etc.c
	jpeg/isp_jpeg.c
	key/key.c
	MCP2515/MCP2515_main.c
	minilib/aes_core.c
	minilib/aes_cbc.c
	minilib/cbc128.c
	minilib/aes_ecb.c
	minilib/md5.c
	minilib/net_ascii.c
	minilib/sha1.c
	minilib/sha256.c
	minilib/Base64.c
	minilib/enx_math.c
	minilib/enx_time.c
	rtc/rtc.c
	rtc/rtc-lib.c
	rtc/pcf8563.c
	rtc/s35390a.c
	sdio/sdio_cd.c
	sdio/sdio_mmc.c
	sdio/sdio_wf.c
	sfls/sfls_model.c
	sfls/eon_en25qh128a.c
	sfls/eon_en25qh256.c
	sfls/winbond_w25q64jviq.c
	sfls/winbond_w25q256jvq.c
	sfls/gigadevice_gd25q128c.c
	sfls/micron_n25q128a.c
	sfls/micron_mt25ql128.c
	sfls/micron_mt25ql256.c
	sfls/issi_is25lp064.c
	sfls/issi_is25lp128.c
	sfls/issi_is25lp256.c
	sfls/macronix_mx25l12835f.c
	sfls/macronix_mx25u12832f.c
	string/vsnprintf.c
	string/enx_string.c
	string/uart_string.c
	TP2827/TP_main.c
	wifi/wlif_tools.c
)

# 라이브러리 생성
ADD_LIBRARY ( dev STATIC ${DEV_SRCS} ${DEV_HDRS} )